fixed navbar collapse on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,14 @@ a,
   color: #9fffcb !important;
 }
 nav .nav-link {
+  margin-left: 10px;
   color: #9fffcb !important;
 }
 
 nav .nav-link:hover {
+  margin-left: 10px;
   color: white !important;
-  transform: scale(1.1);
+  /* transform: scale(1.1); */
 }
 
 /* CAROUSEL */
